test/files/neg/typeerror.check
typeerror.scala:6: error: type mismatch;
 found   : Long(in method add)
 required: scala.Long
    else add2(x.head, y.head) :: add(x.tail, y.tail)
                ^
typeerror.scala:6: error: type mismatch;
 found   : Long(in method add)
 required: scala.Long
    else add2(x.head, y.head) :: add(x.tail, y.tail)
                        ^
two errors found
